--- a/classes.html
+++ b/classes.html
@@ -34,7 +34,7 @@
 	<ul>
 	  <li><a href = "index.html">Home</a></li>
 	  <li><a href = "Crafts&Supplies.html">Crafts & Supplies</a></li>
-	  <li><a href = "Classes.html">Classes</a></li>
+	  <li><a href = "classes.html">Classes</a></li>
 	  <li><a href = "aboutus.html">About Us</a></li>
 	</ul>
 	
